# dynadojo

./: .dockerignore  .gitignore  .pypirc  CONTRIBUTING.md  DEVGUIDE.md  Dockerfile  Dockerfile.raytune.gcp  LICENSE  README.md  UML_refs.md  ca_demo.ipynb  ca_test.ipynb  cloudbuild.yaml  cnn_test.ipynb  contributing.md  ctln_demo.ipynb  example_results.ipynb  feature-wish-list.txt  graphics.ipynb  koopman_test.py  lds.sh  lds_demo.ipynb  lds_test.ipynb  local-dev-setup.md  lv_demo.ipynb  main.py  new_graphs.ipynb  opinion_demo.ipynb  playground.ipynb  plot_experiments.ipynb  pyproject.toml  requirements.txt  snn_demo.ipynb  temp.ipynb  test.ipynb  todo.txt
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  improvement.md
.github/workflows/: deploy.yml  python-package.yml  python-testing.yml  static.yml
.ipynb_checkpoints/: snn_demo-checkpoint.ipynb
cache/: cnn_data_fts_100.csv  cnn_data_fts_30.csv  lpr_data_fts_100.csv  lpr_data_fts_30.csv  lr_data_fc.csv  lr_data_fc_2.csv  lr_data_fc_2_False.csv  lr_data_fc_30.csv  lr_data_fc_50.csv  lr_data_fts.csv  lr_data_fts_2.csv  lr_data_fts_500.csv  simple_data_2.csv  simple_data_30.csv  simple_data_50.csv  simple_data_fc.csv  simple_data_fc_2_False.csv  simple_data_fts_500.csv
cache/CA/: cnn_data_fe_100.csv  cnn_data_fe_30.csv  lpr_data_fe_100.csv  lpr_data_fe_30.csv
cache/LDS/: LR_data_fts_500_True.csv  Simple_data_fts_500_True.csv  lr_data_fc_30_False.csv  lr_data_fc_30_True.csv  lr_data_fc_5_True.csv  lr_data_fc_6_False.csv  lr_data_fc_6_True.csv  simple_data_30_False.csv  simple_data_30_True.csv  simple_data_6_False.csv  simple_data_6_True.csv
cache/LDS/LR/: fts_n=100_in_dist=False.csv  fts_n=100_in_dist=True.csv  fts_n=30_in_dist=False.csv  fts_n=30_in_dist=True.csv  fts_n=50_in_dist=False.csv  fts_n=50_in_dist=True.csv  target_loss.csv  target_loss1.csv  target_loss_new.csv
cache/LDS/contour/: l=1000_in_dist=False.csv  l=1000_in_dist=True.csv  l=100_in_dist=False.csv  l=100_in_dist=True.csv  l=10_in_dist=False.csv  l=10_in_dist=True.csv  l=20_in_dist=True.csv  l=2_in_dist=False.csv  l=2_in_dist=True.csv  l=30_in_dist=True.csv  l=40_in_dist=True.csv  (+1 more)
cache/TLN/: fc_l=10.csv  fc_l=100_in_dist=True.csv  fc_l=10_in_dist=False.csv  fc_l=10_in_dist=True.csv  fc_l=20_in_dist=True.csv  fc_l=30_in_dist=True.csv  fc_l=40_in_dist=True.csv  fc_l=5.csv  fc_l=500_in_dist=True.csv  fc_l=50_in_dist=True.csv
demos/: ca_demo.ipynb  ctln_demo.ipynb  dmd_demo.ipynb  epidemic_demo.ipynb  fbsnn_pde_demo.ipynb  fc_cnn_ca_demo.ipynb  fc_dnn_nbody_demo.ipynb  fd_cnn_ca_demo.ipynb  fixed_complexity_demo.ipynb  fixed_error_demo.ipynb  fixed_train_size_demo.ipynb  fts_dmd_lds_demo.ipynb  fts_sindy_lorenz_demo.ipynb  gilpinmaps_demo.ipynb  gru_rnn_demo.ipynb  heat_demo.ipynb  hot_dino.ipynb  kuramoto_demo.ipynb  kuramoto_lr_demo.ipynb  lds_demo.ipynb  lorenz_demo.ipynb  lv_demo.ipynb  nbody_demo.ipynb  opinion_demo.ipynb  saved_algorithm_demo.ipynb  sindy_demo.ipynb  sindy_demo1.ipynb  sindy_demo2.ipynb  snn_demo.ipynb  test_demo.ipynb
demos/algorithms/: cnn_demo.ipynb  dmd_demo.ipynb  dnn_vs_gru.ipynb  dumb_neural_net.ipynb  dynadojo_neural_net.ipynb  lr_demo.ipynb  sindy_lorenz_demo1.ipynb  sindy_lorenz_demo2.ipynb  transformer_demo.ipynb
demos/challenges/: fixed_train_size_demo.ipynb
demos/systems/: ca_demo.ipynb  ctln_demo.ipynb  epidemic_demo.ipynb  hot_dino.ipynb  kuramoto_demo.ipynb  lds_demo.ipynb  lorenz_demo.ipynb  lv_demo.ipynb  nbody_demo.ipynb  snn_demo.ipynb  static_dataset_demo.ipynb
docs/: complexity_comparison.JSON  dyna_complexity_data.JSON  gilpin_complexity_data.JSON
docs/source/: api-reference.rst  conf.py  getting-started.rst  heat_example.rst  index.rst  sindy_example.rst
dynadojo/: LICENSE  __init__.py  abstractions.py  challenges.py  complexity-gen.ipynb  setup.py  tasks.py
dynadojo/baselines/: __init__.py  aug_ode.py  basic.py  cnn.py  dmd.py
dynadojo/dynadojo/: abstractions.py  challenges.py
dynadojo/dynadojo.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
dynadojo/systems/: SIR.py  __init__.py  ca.py  ctln.py  foodweb.py  generalizedSIR.py  glvpp.py  kuramoto.py  lds.py  logisticmap.py  lorenz.py  lv.py  santi.py  snn.py  spring.py  utils.py
dynadojo/testing/: systems.py
dynadojo/utils/: __init__.py  fbsnn_pde.py  kuramoto.py  lds.py  lv.py  opinion.py  plotting.py
dynascale/: __init__.py  abstractions.py  baselines.py  lds.py  metrics.py  requirements.txt  tasks.py
dynascale/baselines/: __init__.py  aug_ode.py  basic.py  cnn.py  conv.py  koopman.py  lpr.py  lr.py  new_koopman.py  ode.py  old_koopman.py  simple.py  tommylr.py
dynascale/challenges/: __init__.py  ca.py  lds.py  snn.py
dynascale/systems/: ca.py  ctln.py  lds.py  snn.py
dynascale/utils/: __init__.py  ca.py  lds.py  plotting.py
experiments/: README.md  __init__.py  __main__.py  dynadojo.sbatch  dynadojo1.sbatch  dynadojo10.sbatch  dynadojo100.sbatch  dynadojo1000.sbatch  dynadojo300.sbatch  experiments.py  keys.py  lds_lr.py  main.py  param_utils.py  params.py  quest_dynadojo.sbatch  quest_params.py  utils.py
experiments/quest/: help.md  quest_params.py  run.sbatch
experiments/sherlock/: dynadojo1.sbatch
experiments/sherlock_sbatch/: lr_lds.sbatch
graphs/: complexity-gen.ipynb  ood-gen.ipynb  system-gen.ipynb
scripts/: fc.py  fe.py  fts.py  run_ca.py  run_ca_fc.py  run_ca_fe.py  run_ca_fts.py  run_lds.py  run_lds_fc.py  run_lds_fts.py  run_snn_fc.py  run_snn_fe.py  run_snn_fts.py  tln_fc.py
slurm/: README.md
slurm/jobscripts/: README.md  check.sh  interactive.sh  make.sh  plot.sh  run.sbatch  scale.sh
slurm/quest/: caryn_env.sh  env.sh  env_example.sh  help.md  submit.sh
slurm/scripts/: _setup.sh  _setup_caryn.sh  sbatch_run.sh  sbatch_submit.sh  srun_check.sh  srun_interactive.sh  srun_make.sh  srun_plot_check.sh  srun_scale.sh  srun_setup.sh  srun_submit.sh
slurm/sherlock/: env.sh  help.md  submit.sh
slurm/slurm_scripts/: interactive.sh
src/dynadojo/: __init__.py  abstractions.py  challenges.py  wrappers.py
tests/: __main__.py  systems.py  test_deterministic.py
(+228 files in other folders)
