[project]
name = "DynaDojo"
authors = [
    {name = "Logan Mondal Bhamidipaty", email = "loganmb@stanford.edu"},
    {name = "Tommy Anthony Bruzzese", email = "tbru@stanford.edu"},
    {name = "Max Kanwal", email = "mkanwal@stanford.edu"},
    {name = "Rami Ratl Mrad", email = "ramiratlmrad@berkeley.edu"},
    {name = "Caryn Tran", email = "caryn.tran@berkeley.edu"}
]
dependencies = [
    "numpy>=1.26.4",
    "networkx>=3.3",
    "ndlib>=5.1.1",
    "scikit-learn>=1.5.1",
    "torch>=2.3.1",
    "torchdiffeq>=0.2.4",
    "cellpylib>=2.4.0",
    "pysindy>=1.7.5",
    "pydmd>=1.0.0",
    "seaborn>=0.13.2",
]
requires-python = ">=3.10,<=3.11"
readme = "README.md"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
[[tool.pdm.source]]
url = "https://pypi.org/simple"
verify_ssl = true
name = "pypi"

# Pytorch CPU https://github.com/pdm-project/pdm/issues/694
[[tool.pdm.source]]
type = "find_links"
url = "https://download.pytorch.org/whl/cpu/torch_stable.html"
name = "pytorch"

# Tensorflow Wheel Issues https://github.com/python-poetry/poetry/issues/8271
# Specifying Env Markers https://peps.python.org/pep-0508/#environment-markers

[tool.pdm.dev-dependencies]
dev = [
    "pylint>=3.2.5",
    "jupyter>=1.0.0",
    "parameterized>=0.9.0",
]

[project.optional-dependencies]
all = [
    "dynadojo[rebound,tensorflow]",
]
rebound = [
    "rebound>=4.0.1",
]
tensorflow = [
    "tensorflow",
]
tensorflow-mac = [
    "dynadojo[tensorflow]",
    "tensorflow-metal", 
]

tensorflow-old = [
    "tensorflow-macos; sys_platform=='darwin' and platform_machine=='arm64'",
    "tensorflow-intel; sys_platform=='win32'",
    "tensorflow-cpu; (sys_platform=='linux' or sys_platform=='darwin') and (platform_machine!='arm64' and platform_machine!='aarch64')",
    "tensorflow-cpu-aws; sys_platform=='linux' and (platform_machine=='arm64' or platform_machine=='aarch64')",
    "tensorflow-io-gcs-filesystem; sys_platform!='darwin' or platform_machine!='arm64' or  sys_platform=='win32'"
]


[project.urls]
Home = "https://github.com/FlyingWorkshop/dynadojo/"
