[project]
name = "DynaDojo"
authors = [
    {name = "Max Kanwal", email = "mkanwal@stanford.edu"},
    {name = "Caryn Tran", email = "caryn.tran@berkeley.edu"}
]
dependencies = [
    "numpy>=1.24.4",
    "scikit-learn>=1.3.2", #PCA
    "seaborn>=0.13.2",
]

requires-python = ">=3.9"
readme = "README.md"
classifiers = ["License :: OSI Approved :: MIT License"]
version = "0.1.0"
description = "An Extensible Benchmarking Platform for Scalable Dynamical System Identification"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
distribution = true

[[tool.pdm.source]]
url = "https://pypi.org/simple"
verify_ssl = true
name = "pypi"

# Pytorch CPU https://github.com/pdm-project/pdm/issues/694
[[tool.pdm.source]]
type = "find_links"
url = "https://download.pytorch.org/whl/cpu/torch_stable.html"
name = "pytorch"
include_packages = ["torch"]


# Tensorflow Wheel Issues https://github.com/python-poetry/poetry/issues/8271
# Specifying Env Markers https://peps.python.org/pep-0508/#environment-markers
[tool.pdm.dev-dependencies]
dev = [
    "pylint>=3.2.6",
    "jupyter>=1.0.0",
    "parameterized>=0.9.0",
]

[project.optional-dependencies]
all = [
    "dynadojo[alg-all,sys-all]",
]
alg-all = [
    "dynadojo[alg-dmd,alg-sindy,alg-torch]",
]
sys-all = [
    "dynadojo[sys-ca,sys-ctln,sys-epidemic,sys-fbsnn,sys-gilpin,sys-opinion,sys-santi]",
]
############ Algorithms ############
alg-torch = [
    "torchdiffeq>=0.2.4",
    "torch==2.2.2; sys_platform == \"darwin\" and platform_machine == \"x86_64\"", # MacOS Intel Chipset
    "torch>=2.2.2; sys_platform != \"darwin\" or platform_machine != \"x86_64\"",
]
alg-sindy = [
    "pysindy>=1.7.5",
]
alg-dmd = [
    "pydmd>=1.0.0",
]
############ Systems ############
sys-ca = [
    "cellpylib>=2.4.0",
]
sys-fbsnn = [
    "dynadojo[tensorflow]",
]
sys-gilpin = [
    "dysts>=0.86",
]
sys-ctln = [
    "dynadojo[networkx]",
]
sys-epidemic = [
    "dynadojo[networkx, ndlib]",
]
sys-opinion = [
    "dynadojo[networkx, ndlib]",
]
sys-santi = [
    "rebound>=4.4.2",
]
############ Libraries ############
ndlib = [
    "ndlib>=5.1.1",
]
networkx = [
     "networkx>=3.2.1", 
]
tensorflow = [
    "tensorflow>=2.16.2; sys_platform != \"darwin\" or platform_machine != \"x86_64\"", 
    "tensorflow==2.16.2; sys_platform == \"darwin\" and platform_machine == \"x86_64\"", # MacOS Intel Chipset
    "tensorflow-metal>=1.1.0; sys_platform == \"darwin\" and platform_machine == \"arm64\"", # MacOS M Series Chipset
    
]

[project.urls]
Home = "https://github.com/DynaDojo/dynadojo/"


# TO LOCK 
# pdm lock -G all  --platform=macos_arm64 --python="==3.10.*" --lockfile=py310-macos_arm64.lock

# TO INSTALL FROM GITHUB
# pip install "dynadojo[sys-gilpin] @ git+https://github.com/carynbear/dynadojo.git@release/slim"